Финальные изменения